[package]
name = "grokdb2"
version = "0.1.0"
authors = ["Alberto Leal <mailforalberto@gmail.com>"]

# [profile.test]
# panic = 'unwind'   # ensures panic is unwind safe

# [profile.dev]
# panic = 'unwind'   # ensures panic is unwind safe

# [profile.release]
# panic = 'unwind'   # ensures panic is unwind safe

[[bin]]
name = "grokdb2"
# rename this
# path = "src/guardian.rs"
path = "src/main.rs"
# path = "src/moo.rs"
# path = "src/json_sandbox.rs"

[dependencies.chomp]
git = "https://github.com/m4rw3r/chomp"
rev = "9901095dd4a10da39d41c4af501cd91380356abd"
# version = "~0.2.5"

[dependencies.hyper]
version = "0.9.10"

[dependencies.rusqlite]
version = "0.7.3"
features = ["functions", "backup"]

[dependencies.horrorshow]
git = "https://github.com/Stebalien/horrorshow-rs"
rev = "c5caa64979866aa7a99d60de595b74c7d9d4ad01"

[dependencies]
clippy = {version = "0.0.87", optional = true}
serde = "0.8.6"
serde_json = "0.8.1"
serde_macros = "0.8.6"
regex = "0.1.73"
# horrorshow = "0.5"
url = "1.1"
conduit-mime-types = "0.7.3"
lazy_static = "0.2.1"
mime = "0.2.2"
matches = "0.1.2"
time = "0.1.35"
quick-error = "1.1.0"
chrono = "0.2"
guardian = "0.3.0"
indoc = "0.1"
random-wheel = { git = "https://github.com/dashed/random-wheel-rs", branch = "range-type" }
rand = "0.3"
libc = "0.2.12"
pcg = {git = "https://github.com/codahale/pcg"}

[features]
default = []
